# thinkledger

./: .air.toml  .dockerignore  .env.example  .gitignore  .prettierrc  Dockerfile  Dockerfile.dev  LICENSE.md  Makefile  README.md  compose.dev.yaml  compose.dev.yml  go.mod  go.sum  main.py  mypy.ini  package-lock.json  package.json  pyproject.toml  ruff.toml  tailwind.config.js  tide.toml
.github/workflows/: test.yml
agents/: gemini.py
agents/gemini/: gemini_transaction.go  gemini_trial_balance.go  gemini_utils.go
cmd/: main.go
cmd/app/: core.go  server.go
core/: celery.py  core.py  google_core.py  plaid_core.py
core/google/: app_script.py  google_sheet.py
database/: database.go
google_core/: google_sheet.py
google_script/: google_script.gs
handlers/: chat.go  handler.go  journal.go  login.go  register.go  t_accounts.go  transaction.go  trial_balance.go
helpers/: celery.py  delpg.py  delredis.py  delscript.py  download_gs.py  parse_app_script.py  parse_google_script.py  parse_gs.py  perf.py  unlink.py
lib/styles/: styles.go
middleware/: auth_middleware.go  authentication.py  cors.go  rateLimiter.go
plaid_core/: plaid.py
prompt/: journal_entry.py
routes/: google_callback.py  google_service_token.py  integrations.py  legal.py  plaid.py  support.py  user_auth.py
static/: input.css  style.css
templates/: not_found.html  not_found_page.templ  not_found_page_templ.go  root.html  root.templ  root_templ.go  sign_in_page.templ  sign_in_page_templ.go
test/: test_journal_entry.py
tests/: test_google_sheet.py  test_journal_entry.py  test_main.py
thinkledger/: main.py  server.py
utils/: auth_utils.py  constants.go  constants.py  core_utils.py  logger.py  plaid_utils.py  styles.py  tasks.py  types.py  util.py  utils.go
(+150 files in other folders)
